--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -1,30 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:padding="0dp"
     tools:context=".OnBoarding">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/slider"
         android:layout_width="match_parent"
-        android:layout_height="550dp">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
     </androidx.viewpager.widget.ViewPager>
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
+            android:id="@+id/btn_get_started"
             android:layout_width="match_parent"
+            android:layout_margin="25dp"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            android:text="Get started" />
+            android:background="@color/colorAccent"
+            android:text="@string/lets_get_started" />
 
-    </LinearLayout>
+<!--        <LinearLayout-->
+<!--            android:id="@+id/dotsLayout"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:paddingBottom="200dp" />-->
 
-</LinearLayout>
+    </RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
